closes #13: fix z-index issue of autocompletions

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -6,3 +6,7 @@
 div.modal-dialog.google-visualization-charteditor-dialog{
 	z-index: 100;
 }
+
+.CodeMirror-hints {
+	z-index: 100;
+}
